[workspace]
members = ["core"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.92"


[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = 0 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
