[package]
name = "ogn-aprs-parser-pyo3"
version = "0.1.0-rc1"
rust-version = { workspace = true }
edition = { workspace = true }
description = "Collection of Rust bindings to the ogn-aprs-parser crate"
authors = ["Shaun Ho <sefho98@gmail.com"]
license = "MIT"
repository = "https://github.com/Shaun-Ho/ogn-aprs-parser"
readme = "README.md"

[lib]
name = "ogn_aprs_parser_pyo3"
crate-type = ["cdylib", "rlib"]
doc = false

[features]
stubgen = ["dep:pyo3-stub-gen"]

[dependencies]
pyo3 = { version = "0.28.2", features = [
  "abi3-py310",
  "chrono",
  "extension-module",
] }
ogn-aprs-parser = { path = "../core" }
chrono = "0.4.44"
pyo3-stub-gen = { version = "0.21", optional = true }

[dev-dependencies]
