[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ogn-aprs-parser"
requires-python = ">=3.10"
version = "0.1.0-rc2"
dependencies = []


[tool.maturin]
manifest-path = "Cargo.toml"
features = ["pyo3/abi3-py310"]
python-source = "."
module-name = "ogn_aprs_parser.ogn_aprs_parser_pyo3"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "FBT", "INP001", "S101"]
"tests/test_types.py" = ["E501"]


[tool.uv]
cache-keys = [
  { file = "Cargo.toml" },
  { file = "../core/Cargo.toml" },
  { file = "src/**/*.rs" },
  { file = "../core/src/**/*.rs" },
]
